[project]
name = "Trello-Action-Counts"
version = "2021.8.1"
description = "Literate, Functional Python: Agile Velocity from Trello"
readme = "README.md"
requires-python = ">=3.9.5"
keywords = ["Trello", "Agile", "Literate Programming"]
dependencies = ["py-trello"]

[[project.authors]]
email = "slott56@gmail.com"

[[project.authors]]
name = "Steven F. Lott"

[project.license]
file = "LICENSE.txt"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.20.0
skipsdist = True
envlist = py39
[testenv]
description = "Master suite of tests for all modules."
deps =
	pytest==6.2.4
	pytest-cov==2.12.0
	mypy==0.910
	py-trello==0.18.0
setenv   =
    PYTHONPATH = {toxinidir}
commands =
	pytest --doctest-glob='*.py.txt' -v --cov=action_counts --cov-report=term-missing
	python -m doctest --option ELLIPSIS action_counts.py.txt
	mypy --strict --show-error-codes action_counts.py

"""
